--- a/css/responsive.css
+++ b/css/responsive.css
@@ -312,6 +312,30 @@
 	.generic-blockquote {
 		padding: 30px 15px 30px 30px;
 	}
+@media screen and (max-width: 600px) {
+
+		.timeline::after {
+			left: 31px;
+		}
+
+
+		.container-timeline {
+			width: 100%;
+			padding-left: 70px;
+			padding-right: 25px;
+		}
+
+
+		.left-timeline::after,
+		.right-timeline::after {
+			left: 15px;
+		}
+
+
+		.right-timeline{
+			left: 0%;
+		}
+	}
 	/* End Elements Area css
 	============================================================================================ */
 	
