--- a/css/responsive.css
+++ b/css/responsive.css
@@ -317,12 +317,13 @@
 		.timeline::after {
 			left: 31px;
 		}
-
+		
 
 		.container-timeline {
 			width: 100%;
 			padding-left: 70px;
 			padding-right: 25px;
+			padding-top : 40px;
 		}
 
 
