--- a/css/style.css
+++ b/css/style.css
@@ -89,11 +89,11 @@ button:focus {
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
 .header_area {
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 1000;
   transition: background 0.4s, all 0.3s linear; }
   .header_area .navbar {
     background: transparent;
@@ -414,26 +414,7 @@ button:focus {
 /* End Latest Blog Area css
 ============================================================================================ */
 /*================= latest_blog_area css =============*/
-/*.single-recent-blog-post {
-  margin-bottom: 30px; }
-  .single-recent-blog-post .thumb {
-    overflow: hidden; }
-    .single-recent-blog-post .thumb img {
-      transition: all 0.7s linear; }
-  .single-recent-blog-post .details {
-    padding-top: 30px; }
-    .single-recent-blog-post .details .sec_h4 {
-      line-height: 24px;
-      padding: 10px 0px 13px;
-      transition: all 0.3s linear; }
-      .single-recent-blog-post .details .sec_h4:hover {
-        color: #777777; }
-  .single-recent-blog-post .date {
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 400; }
-  .single-recent-blog-post:hover img {
-    transform: scale(1.23) rotate(10deg); }*/
+
 
 
 
@@ -3095,10 +3076,11 @@ border-radius: 6px;
 }
 .h_gallery_item .g_img_item:hover .light, .h_gallery_item:hover .g_img_item {
   opacity: 1;
-  z-index: 9999;
+  z-index: 10;
 }
 .h_gallery_item:hover .g_item_text h4 {
   color: #1b0dda;
+  z-index: 10;
 }
 
 
